Profile/static/css/view_post.css
.card::-webkit-scrollbar { width: 0 !important; }

.card { scrollbar-color: #1d1d1d black; }

.card-body::-webkit-scrollbar { width: 0 !important; }

.card-body {
    scrollbar-color: #1d1d1d black;
}

.refresh-btn-container {
    display: flex;
    flex-flow: column nowrap;
    width: 100%;
    justify-content: center;
    align-items: center;
}

.refresh-btn {
    height: 50px;
    width: 93px;
    line-height: 2.1;
    border: 2px solid mediumslateblue;
}

.refresh-btn:hover {
    border: 2px solid mediumslateblue;
}

.refresh-loading-gif {
    position: absolute;
    display: block;
    height: 47px;
    width: 90px;
    border-radius: 2.25rem !important;
    -webkit-border-radius: 2.25rem !important;
    -ms-border-radius: 2.25rem !important;
    -moz-border-radius: 2.25rem !important;
    -o-border-radius: 2.25rem !important;
    cursor: pointer;
}

.hidden {
    display: none;
}
/* ------------- Centered container ------------- */
.post-view-container {
    width: 100%;
    min-height: 90vh;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    padding: 20px;
    margin-top: 5%;
}

.post-view, .potrait-view {
    display: flex;
    overflow: hidden;
    padding: 20px;
}

.status-view {
    border-radius: 1rem;
    -webkit-border-radius: 1rem;
    -ms-border-radius: 1rem;
    -moz-border-radius: 1rem;
    -o-border-radius: 1rem;
    
    width: 100%;
    justify-content: center;
}

.wrap-img-view, .wrap-potrait-view {
    max-width: 768px;
    background: black;
    overflow: hidden;
    border-radius: 1.5rem 0rem 0rem 1.5rem;
    -webkit-border-radius: 1.5rem 0rem 0rem 1.5rem;
    -ms-border-radius: 1.5rem 0rem 0rem 1.5rem;
    -moz-border-radius: 1.5rem 0rem 0rem 1.5rem;
    -o-border-radius: 1.5rem 0rem 0rem 1.5rem;  
}

.potrait-hw {
    height: 600px;
    width: 480px;
}
/* ---------------------------------------------- */

/* ------------ post-img on the left ------------ */
.post-pic-enlarged-view {
    width: 100%;
    border-radius: 1rem 0rem 0rem 1rem;
    -webkit-border-radius: 1rem 0rem 0rem 1rem;
    -ms-border-radius: 1rem 0rem 0rem 1rem;
    -moz-border-radius: 1rem 0rem 0rem 1rem;
    -o-border-radius: 1rem 0rem 0rem 1rem;  
}

.potrait-height {
    height: 600px;
}
/* ---------------------------------------------- */

/* ----------- post-data on the right ----------- */
.wrap-data-view, .wrap-potrait-data-view {
    width: 415px;
    background: black;
    border-radius: 0rem 1rem 1rem 0rem;
    -webkit-border-radius: 0rem 1rem 1rem 0rem;
    -ms-border-radius: 0rem 1rem 1rem 0rem;
    -moz-border-radius: 0rem 1rem 1rem 0rem;
    -o-border-radius: 0rem 1rem 1rem 0rem;    
}

.data-view-enlarged { 
    flex: 0.5; 
    border-radius: 1rem;
}

#cardtab { float: left; }

.del-post-btn {
    float: right;
    border: 1px solid transparent;
}

.del-post-btn:hover {
    background: indianred;
    color: black;
    border: 1px solid indianred;
}

.display-2:hover {
    color: #a7a2a2;
}
/* ---------------------------------------------- */

/* ---------- post-data detail section ---------- */
.fa-meh-blank {
    color: springgreen;
    font-size: 17px;
    position: relative;
    top: 0.5px;
    font-weight: 100;
}

.postview-pill-align {
    position: relative;
    top: 0.5px;
}

.detail-view-card-body {
    padding: 10px;
    overflow-x: auto;
    position: relative;
}

.only-detail {
    height: 430px;
    display: flex;
    justify-content: center;
}

.post-user {
    text-align: center;
    padding: 5px;
    width: 100%;
}

.post-username {
    position: relative;
    right: 2px;
    font-size: 16px;
}

.post-details {
    font-size: 13px;
    position: relative;
    right: 1px;
}

.post-user-profile-pic {
    height: 70px;
    position: relative;
    bottom: 5px;
}

.post-status-caption { font-size: 15px; }

.fa-trash-alt { font-weight: 500; }

.post-bookmark {
    position: relative;
    top: 9px;
    margin-left: 10px;
    float: right;
}
/* ---------------------------------------------- */

/* ---------- post-data comment section --------- */
.comment-view-card-body {
    padding: 0px 20px 0px 25px;
    overflow-x: auto;
    position: relative;
}

#empty-comment, #empty-like {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    color: white;
    text-align: center;
    opacity: 0.5;
}

.comment-content { font-size: 12px; }

.comment-reply {
    float: left;
    margin-top: 8px;
    margin-bottom: 5px;
    color: mediumpurple;
}

.comment-dlt {
    float: left;
    margin-top: 8px;
    margin-left: 15px;
    color: red;
}

.comment-dlt:hover {
    color: orangered;
}

.m-0 { font-size: 11px; }
.ml-2, .ml-3 { position: unset; }

.post-profile-img { bottom: 0; }

.comment-reply-margin { 
    margin-left: 48px;
    border-left: 2px solid blueviolet;
}

.comment-date-time, .liked-user-full-name {
    font-size: 11px;
}

.comment-user {
    margin-left: 5px;
    margin-bottom: -5px;
    overflow-x: auto;
    line-height: 1;
}

.comment-input { 
    float: left;
    width: 87%;
 }

.comment-send-btn {
    float: right;
}

.comment-rep-collapse { 
    float: right; 
    color: mediumpurple;
    margin-top: 5px;
}

.rotate_180 { transform: rotate(180deg); }

.comment-rep-card-body { padding: 7px 0px 7px 0px; }
/* ---------------------------------------------- */

/* ----------- post-data like section ----------- */
.like-pill-ico { position: relative; bottom: 1.5px; }

.liked-user {
    margin-left: 5px;
    margin-bottom: 5px;
    font-size: 17px;
}

.like-view-card-body {
    padding: 5px 20px 0px 20px;
    overflow-x: auto;
    position: relative;
}

.like-prof-margin {
    margin-right: 5px;
}

.mr-1 { height: fit-content; }

.like-date-time {
    position: absolute;
    right: 33px;
    line-height: 3;
    font-size: 11px;
}

.like-section-footer {
    background:rgba(0,0,0,0);
    display: flex;
    justify-content: center;
}

.post-view-like-btn {
    background: transparent;
    border-radius: 50% !important;
    -webkit-border-radius: 50% !important;
    -ms-border-radius: 50% !important;
    -moz-border-radius: 50% !important;
    -o-border-radius: 50% !important;
    height: 39px;
    width: 40px;
    opacity: 1;
    border-color: transparent;
}

.liked { color: orangered; }
.disliked { color: darkgrey; }

.post-view-like-btn:hover {
    background-color: black;
    border-color: black;
}
/* ---------------------------------------------- */

/* ------------- Reponsive content -------------- */
@media only screen and (max-width: 767px) {
    .post-view, .potrait-view { flex-direction: column; }

    .refresh-btn-container { margin-bottom: 10px; }

    .container-fluid,
    .post-view-container,
    .post-view, .potrait-view, .post-view-container { padding: 0; }

    .post-view-container {
        margin-top: 15%;
    }

    .status-view, .wrap-img-view, .wrap-potrait-view, .post-pic-enlarged-view { border-radius: 0; }

    .wrap-data-view { 
        border-radius: 0; 
        -webkit-border-radius: 0;
        -ms-border-radius: 0;
        -moz-border-radius: 0;
        -o-border-radius: 0;
        width: 100%;
    }
    .comment-input { width: 83%; }

    .data-view-enlarged { border-radius: 0; }

    .like-date-time {
        right: 26px;
    }
}

@media only screen and (min-width: 768px) and (max-width: 1024px) {
    .post-view {
        flex-direction: column;
    }

    .wrap-img-view {
        border-radius: 1.5rem 1.5rem 0rem 0rem;
        -webkit-border-radius: 1.5rem 1.5rem 0rem 0rem;
        -ms-border-radius: 1.5rem 1.5rem 0rem 0rem;
        -moz-border-radius: 1.5rem 1.5rem 0rem 0rem;
        -o-border-radius: 1.5rem 1.5rem 0rem 0rem;
    }

    .post-pic-enlarged-view {
        border-radius: 0;
        -webkit-border-radius: 0;
        -ms-border-radius: 0;
        -moz-border-radius: 0;
        -o-border-radius: 0;
    }

    .wrap-data-view {
        border-radius: 0rem 0rem 2rem 2rem;
        -webkit-border-radius: 0rem 0rem 2rem 2rem;
        -ms-border-radius: 0rem 0rem 2rem 2rem;
        -moz-border-radius: 0rem 0rem 2rem 2rem;
        -o-border-radius: 0rem 0rem 2rem 2rem;
        width: 100%;
    }

    .post-view-card-body, .comment-view-card-body {
        height: 240px;
    }
}
/* ---------------------------------------------- */

